simplify isEmpty expressaions as isBlank